# open-memory

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml  test.yml
diagrams/: memory.mmd
open_memory/: __init__.py  memory.py
tests/: test_memory.py
